Remove `ChooseUi` class, API test module, and unused language keys.
Cleaned up by removing the deprecated `ChooseUi` class, the unused API test module, and irrelevant language keys in `lang.yml` to reduce maintenance burden and improve project clarity.